Fixed flex-wrap so that fish would react to page size in main.css

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,11 +14,15 @@ header {
 img {
     width: 300px;
     border: 4px solid black;
+}
+
+.fish {
+    display: flex;
     flex-wrap: wrap;
 }
 
 dl {
-    padding-bottom: 2em;
+    padding: 0 2em 2em 2em;
 }
 
 section {
@@ -34,11 +38,11 @@ p {
 }
 
 .contentContainer__left {
-    flex: 75%;
+    flex: 3;
 }
 
 .contentContainer__right {
-    flex: 25%;
+    flex: 1;
 }
 
 h3 {
